tests/neg-custom-args/captures/i21614.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21614.scala:12:33 ---------------------------------------
12 |  files.map((f: F) => new Logger(f)) // error, Q: can we make this pass (see #19076)?
   |                                 ^
   |                                 Found:    (f : F)
   |                                 Required: File^
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21614.scala:15:12 ---------------------------------------
15 |  files.map(new Logger(_)) // error, Q: can we improve the error message?
   |            ^^^^^^^^^^^^^
   |            Found:    (_$1: box File^{files*}) ->{files*} box Logger{val f: File^{_$1}}^{localcap.rd, _$1}
   |            Required: (_$1: box File^{files*}) ->{fresh} box Logger{val f: File^?}^?
   |
   |            Note that reference unknown.localcap.rd
   |            cannot be included in outer capture set ?
   |
   | longer explanation available when compiling with `-explain`
